<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.jonmid.mystareas.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/id_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_weight="0.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/StyleTextInputWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_login_username"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/StyleTextInputWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_login_password"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/id_btn_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_login_btn_in"
                    android:layout_marginTop="20dp"
                    android:theme="@style/StyleButton"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/id_tv_question"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_label_question"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/id_tv_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_label_link_createaccount"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_toRightOf="@id/id_tv_question"
                        android:layout_marginLeft="10dp"
                        android:onClick="goCreateAccount"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
